kubernetes/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: golinks
spec:
  hosts:
  - ${APP_HOSTNAME}
  gateways:
  - ${ISTIO_GATEWAY_NAME}
  http:
  - match:
    - port: 443
    route:
    - destination:
        host: golinks
        port:
          number: 3000
